[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name="2022-1"
path="2022-1/main.rs"

[[bin]]
name="2022-4"
path="2022-4/main.rs"

[[bin]]
name="2022-5"
path="2022-5/main.rs"

[[bin]]
name="2022-6"
path="2022-6/main.rs"

[[bin]]
name="2022-7"
path="2022-7/main.rs"

[[bin]]
name="2022-8"
path="2022-8/main.rs"

[[bin]]
name="2022-9"
path="2022-9/main.rs"

[[bin]]
name="2022-10"
path="2022-10/main.rs"


[[bin]]
name="2023-1"
path="2023-1/main.rs"

[[bin]]
name="2023-2"
path="2023-2/main.rs"

[[bin]]
name="2023-3"
path="2023-3/main.rs"

[[bin]]
name="2023-4"
path="2023-4/main.rs"

[[bin]]
name="2023-5"
path="2023-5/main.rs"

[[bin]]
name="2023-6"
path="2023-6/main.rs"

[[bin]]
name="2023-7"
path="2023-7/main.rs"

[[bin]]
name="2023-8"
path="2023-8/main.rs"

[[bin]]
name="2023-9"
path="2023-9/main.rs"

[[bin]]
name="2023-10"
path="2023-10/main.rs"

[[bin]]
name="2023-11"
path="2023-11/main.rs"

[[bin]]
name="2023-12"
path="2023-12/main.rs"

[[bin]]
name="2023-13"
path="2023-13/main.rs"

[[bin]]
name="2023-14"
path="2023-14/main.rs"

[[bin]]
name="2023-15"
path="2023-15/main.rs"

[[bin]]
name="2023-16"
path="2023-16/main.rs"

[[bin]]
name="2023-17"
path="2023-17/main.rs"

[[bin]]
name="2023-18"
path="2023-18/main.rs"

[[bin]]
name="2023-19"
path="2023-19/main.rs"

[[bin]]
name="2023-20"
path="2023-20/main.rs"

[[bin]]
name="2023-21"
path="2023-21/main.rs"

[[bin]]
name="2023-22"
path="2023-22/main.rs"

[[bin]]
name="2023-23"
path="2023-23/main.rs"

[[bin]]
name="2023-24"
path="2023-24/main.rs"

[[bin]]
name="2023-25"
path="2023-25/main.rs"

[[bin]]
name="2024-01"
path="2024-01/main.rs"

[[bin]]
name="2024-02"
path="2024-02/main.rs"

[[bin]]
name="2024-03"
path="2024-03/main.rs"

[dependencies]
anyhow = "1.0.75"
regex = "1.10.2"
once_cell = "1.18.0"
ringbuffer = "0.15.0"
thiserror = "1.0.51"
mathru = "0.15.3"
petgraph = "0.6.4"

[dev-dependencies]
rstest = "0.18.2"